# llm-agora

./: .gitignore  ARCHITECTURE.json  BENCHMARKS.json  CALL_INTERFACE.json  CONSTITUTION.md  DATA_MODELS.json  DEPLOYMENT.json  EDGE_RULES.json  LICENSE  PROTOCOL.json  README.md  RELATED_WORK.json  SPEC.json  pyproject.toml
data.example/: log.jsonl  projects.json  task_edges.json  tasks.json
src/: __init__.py  call.py  cli.py  constitution.py  context_filter.py  coordinator.py  discover.py  log_manager.py  models.py  router.py  similarity.py  store.py  utils.py  validator.py
src/link_inference/: candidate_gen.py  graph_export.py  judge.py  pipeline.py
