[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agora"
version = "0.1.0"
description = "LLM 광장 (LLM Agora) — 폴더 자동 인식형 멀티-에이전트 조정 시스템"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# dense embedding 채널 (BGE-M3 / MiniLM). 미설치 시 candidate_gen 이 자동 skip.
dense = ["sentence-transformers>=2.2"]
# 실제 LLM jury / coordinator 백엔드.
llm = ["google-generativeai>=0.5", "anthropic>=0.39"]

[project.scripts]
# `gwangjang` 콘솔 명령. DEPLOYMENT.json installation.entry_points 구현.
#   설치:   pip install -e .
#   사용:   gwangjang init / discover / status / root / call / start
# 설치 후 동등하게: python -m llm_agora.src.cli ...
gwangjang = "llm_agora.src.cli:main"

[tool.setuptools]
# 이 디렉터리 자체를 단일 top-level 패키지 `llm_agora` 로 매핑.
# 내부 상대 임포트(from .models, from ..models)를 그대로 보존한다.
package-dir = { "llm_agora" = "." }
packages = [
    "llm_agora",
    "llm_agora.src",
    "llm_agora.src.link_inference",
]
